--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <object data="letter.svg" type="image/svg+xml"></object>
-        <iframe src="https://olafwempe.com/mp3/silence/silence.mp3 type=audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+        <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 <audio autoplay>
 <source src="logicAndWitchcraft.mp3" type=”audio/mp3″>
 </audio>
