--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
     <body>
         <object data="letter.svg" type="image/svg+xml"></object>
-        <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-<audio autoplay>
-<source src="logicAndWitchcraft.mp3" type=”audio/mp3″>
-</audio>
+        <script>
+
+            window.onload = function(){
+            let music = new Audio("logicAndWitchcraft.mp3");
+            music.loop = true;
+            music.play();}
+        </script>
         
     </body>
 </html>
